fixed footer overlap in css

--- a/corehq/apps/hqwebapp/static/hqwebapp/css/core.css
+++ b/corehq/apps/hqwebapp/static/hqwebapp/css/core.css
@@ -158,7 +158,7 @@ abbr {
 	cursor: help;
 }
 
-.fixed-width #main,
+#main,
 .fixed-width header hgroup,
 .fixed-width header nav,
 .fixed-width header #logged-in{
